--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,4 +15,21 @@ body{
   color: var(--text-default);
 }
 
+.form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.4rem;
+  padding-top: 2.0rem;
 
+}
+
+.formRow{
+   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.4rem;
+  padding-top: 2.0rem;
+}
