--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -1,4 +1,4 @@
-.input{
+.input {
   background: transparent;
   color: none;
   text-align: center;
@@ -6,23 +6,23 @@
   padding: 0.8rem;
   color: var(--text-default);
   outline: none;
-  border: .2rem solid transparent;
+  border: 0.2rem solid transparent;
   border-bottom: 0.2rem solid var(--primary);
   transition: all 0.1s ease-in-out;
 }
 
 .input:focus {
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   border: 0.2rem solid var(--primary);
 }
 
-.input::placeholder{
+.input::placeholder {
   color: var(--gray-500);
   font-size: 1.4rem;
   font-style: italic;
 }
 
-.input:disabled{
+.input:disabled {
   border-bottom: 0.2rem solid var(--disabled);
   color: var(--text-muted);
 }
