--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -44,9 +44,9 @@
   --gray-400: #363d56;
   --gray-500: #454f6a;
   --gray-600: #555f7d;
-  --gray-700: #aab3cc;
-  --gray-800: #cdd3e1;
-  --gray-900: #e6e9f0;
+  --gray-700: #696a6d;
+  --gray-800: #727272;
+  --gray-900: #afb0b3;
 
   --text-default: #0a0f1a;
   --text-muted: #272f43;
